--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
     "leaflet": "^1.6.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-icons": "^3.10.0",
     "react-leaflet": "^2.7.0",
     "react-router-dom": "^5.2.0",
@@ -18,7 +19,7 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "react-scripts --transpileOnly --ignore-watch node_modules start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
